# flux2-spectral-analysis

./: .gitignore  README.md  pyproject.toml  verify_setup.py
configs/: experiment.yaml
notebooks/: exploration.ipynb
results/: summary.json
results/controls/: control_metrics.json
results/flux2_max/: metrics.json
results/grid_ablation/: grid_comparison.json
results/klein_base_g4_s50/: metrics.json
results/klein_distilled/: detection_results.json  metrics.json
results/tables/: control_metrics.json  detection_results.json  spectral_metrics.json
results/vae_roundtrip/: metrics.json
scripts/: detect_watermark.py  generate_flux.py  generate_grid.py  run_all.py  run_analysis.py  run_controls.py  run_detection.py  run_grid_analysis.py  run_vae_roundtrip.py  sample_ffhq.py
src/controls/: degrade.py  directional.py
src/detection/: classifier.py  features.py  importance.py
src/spectral/: azimuthal.py  fft.py  io.py  metrics.py  preprocessing.py  statistics.py
src/visualization/: detection.py  difference.py  heatmaps.py  spectra.py  style.py
